big structure update

--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -22,43 +22,47 @@ ADVERTISEMENT: "Реклама"
 
 COUNTRY_RUSSIA: "Россия"
 
-LOADING_DATA: "Загрузка данных..."
+LOADING_DATA: "[*] Загрузка данных..."
 ADD_SERVER: "Добавить"
 
-ERROR_SPECIFY_IP: "Укажите IP!"
-ERROR_SPECIFY_IP_OR_DOMAIN: "Укажите IP или домен!"
-ERROR_SPECIFY_IP_PORT: "Укажите IP и порт!"
-ERROR_SPECIFY_COMMAND: "Укажите команду!"
-ERROR_SPECIFY_LENGTH: "Укажите длину!"
-ERROR_SPECIFY_TEXT: "Укажите текст!"
-ERROR_SPECIFY_SERVER_IP: "Укажите IP сервера!"
-ERROR_SPECIFY_PHONE: "Укажите номер телефона!"
-ERROR_SPECIFY_TEXT: "Укажите текст!"
-ERROR_SPECIFY_PLAYER_NAME: "Укажите никнейм игрока!"
-ERROR_SPECIFY_URL: "Укажите URL!"
-ERROR_URL_NOT_FOUND_SPECIFY_URL: "В сообщении не найден URL, пример: /short [URL]"
+ERROR_SPECIFY_IP: "[!] Укажите IP!"
+ERROR_SPECIFY_IP_OR_DOMAIN: "[!] Укажите IP или домен!"
+ERROR_SPECIFY_IP_PORT: "[!] Укажите IP и порт!"
+ERROR_SPECIFY_COMMAND: "[!] Укажите команду!"
+ERROR_SPECIFY_LENGTH: "[!] Укажите длину!"
+ERROR_SPECIFY_TEXT: "[!] Укажите текст!"
+ERROR_SPECIFY_SERVER_IP: "[!] Укажите IP сервера!"
+ERROR_SPECIFY_PHONE: "[!] Укажите номер телефона!"
+ERROR_SPECIFY_TEXT: "[!] Укажите текст!"
+ERROR_SPECIFY_PLAYER_NAME: "[!] Укажите никнейм игрока!"
+ERROR_SPECIFY_URL: "[!] Укажите URL!"
+ERROR_URL_NOT_FOUND_SPECIFY_URL: "[!] В сообщении не найден URL, пример: /short [URL]"
 
-ERROR_INCORRECT_IP: "Указан некорректный IP, перепроверьте его"
-ERROR_INVALID_INT: "Указано неверное число!"
-ERROR_INVALID_NUMBER: "Указан неверный номер, перепроверьте его"
-ERROR_INVALID_PORT: "Указан некорректный порт, перепроверьте его"
-ERROR_INVALID_PORT_LENGTH: "Портов больше 65535 не существует!"
-ERROR_NO_IP: "В данном сообщении нет IP-адреса/домена"
-ERROR_GET_INFO: "Не удалось получить информацию"
-ERROR_REPLY_USER_MESSAGE: "Перешлите сообщение пользователя!"
-ERROR_SPECIFY_REASON: "Укажите причину!"
-ERROR_MOJANG_UNAVAILABLE: "Не удалось получить информацию (нет лицензии/сервера Mojang недоступны)"
-ERROR_SERVER_ALREADY_ADDED: "Такой сервер уже добавлен!"
-ERROR_ALIAS_SMALL_OR_BIG: "Алиас должен иметь длину 2-16 символов"
-ERROR_ALIAS_OCCUPIED: "Такой алиас уже используется!"
-ERROR_SERVER_NOT_YOUR: "Устанавливать алиас может только тот, кто добавил сервер!"
-ERROR_SERVER_NOT_EXIST: "Данный сервер не добавлен! Добавить: /mcadd [хост<:порт>]"
-ERROR_USER_NOT_EXIST: "Данный пользователь не найден в базе данных!"
+ERROR_INCORRECT_IP: "[!] Указан некорректный IP, перепроверьте его"
+ERROR_INVALID_INT: "[!] Указано неверное число!"
+ERROR_INVALID_NUMBER: "[!] Указан неверный номер, перепроверьте его"
+ERROR_INVALID_PORT: "[!] Указан некорректный порт, перепроверьте его"
+ERROR_INVALID_PORT_LENGTH: "[!] Портов больше 65535 не существует!"
+ERROR_NO_IP: "[!] В данном сообщении нет IP-адреса/домена"
+ERROR_GET_INFO: "[!] Не удалось получить информацию"
+ERROR_REPLY_USER_MESSAGE: "[!] Перешлите сообщение пользователя!"
+ERROR_SPECIFY_REASON: "[!] Укажите причину!"
+ERROR_MOJANG_UNAVAILABLE: "[!] Не удалось получить информацию (нет лицензии/сервера Mojang недоступны)"
+ERROR_SERVER_ALREADY_ADDED: "[!] Такой сервер уже добавлен!"
+ERROR_ALIAS_SMALL_OR_BIG: "[!] Алиас должен иметь длину 2-16 символов"
+ERROR_ALIAS_OCCUPIED: "[!] Такой алиас уже используется!"
+ERROR_SERVER_NOT_YOUR: "[!] Устанавливать алиас может только тот, кто добавил сервер!"
+ERROR_SERVER_NOT_EXIST: "[!] Данный сервер не добавлен! Добавить: /mcadd [хост<:порт>]"
+ERROR_USER_NOT_EXIST: "[!] Данный пользователь не найден в базе данных!"
 
-ERROR_OCCURRED: "Произошла ошибка"
-ERROR_OCCURED_WHEN_EXECUTING: "при выполнении команды"
+ERROR_OCCURRED: "[!] Произошла ошибка %id% при выполнении команды"
+ERROR_OCCURRED_ADMIN:
+  - "[Error] Произошла ошибка %id% при выполнении команды"
+  - ""
+  - "> Сообщение: %msg%"
+  - "> Пользователь: %userId%"
 
-NO_ENOUGH_RIGHTS: "Недостаточно прав"
+NO_ENOUGH_RIGHTS: "[!] Недостаточно прав"
 
 REQUEST_RESULT: "Результат запроса"
 REQUEST_CHECK_RESULT: "Результат проверки"
@@ -71,164 +75,246 @@ MCPING_INFO: "Информация о сервере"
 SERVER_STATS: "Статистика сервера"
 
 COMMAND_ALIASES_DESCRIPTION: "Алиасы команд"
+COMMAND_ALIASES_LIST:
+  - "[*] Список алиасов:"
+  - ""
+  - "%aliases%"
 
 COMMAND_BOT_DESCRIPTION: "Информация бота"
-COMMAND_BOT_DESCRIPTION_MESSAGE: "Информация"
-COMMAND_BOT_UPTIME: "Аптайм"
-COMMAND_BOT_RAM_TOTAL: "Всего ОЗУ"
-COMMAND_BOT_RAM_MAX: "Макс. ОЗУ"
-COMMAND_BOT_RAM_USED: "Используется ОЗУ"
-COMMAND_BOT_RESTART: "Перезагрузить"
-COMMAND_BOT_RAM_MEASURE: "мб."
-COMMAND_BOT_CORE: "Ядро"
-COMMAND_BOT_MODULES: "модули"
-COMMAND_BOT_VERSION: "Версия"
+COMMAND_BOT_MESSAGE:
+  - "[*] Информация о боте:"
+  - ""
+  - "| Аптайм: %uptime%"
+  - "| Версия: %version%"
+  - ""
+  - "| Всего ОЗУ: %totalRam% мб."
+  - "| Макс. ОЗУ: %maxRam% мб."
+  - "| Используется ОЗУ: %usedRam% мб."
 
 COMMAND_CONVIP_DESCRIPTION: "Конвертировать IPv4 в десятеричный"
-COMMAND_CONVIP_DECIMAL: "Десятеричный IP"
+COMMAND_CONVIP_DECIMAL_CONVERTED: "[*] Десятичный IP: %decimalIP%"
 
 COMMAND_CURRENCY_DESCRIPTION: "Курс валют относительно рубля (ЦБР)"
-COMMAND_CURRENCY: "Курс валют"
-COMMAND_CURRENCY_USD: "Доллар США"
-COMMAND_CURRENCY_EUR: "Евро"
-COMMAND_CURRENCY_UAH: "Украинская гривна"
-COMMAND_CURRENCY_BYN: "Белорусский рубль"
-COMMAND_CURRENCY_MDL: "Молдавский лей"
-COMMAND_CURRENCY_PLN: "Польский злотый"
-COMMAND_CURRENCY_GBP: "Фунт стерлингов"
-COMMAND_CURRENCY_TRY: "Турецкая лира"
-COMMAND_CURRENCY_CHF: "Швейцарский франк"
-COMMAND_CURRENCY_AED: "Дирхам ОАЭ"
+COMMAND_CURRENCY_MESSAGE:
+  - "[*] Курс валют:"
+  - ""
+  - "%flag_us% Доллар США: %currency_usd%₽"
+  - "%flag_eu% Евро: %currency_eur%₽"
+  - "%flag_ua% Украинская гривна: %currency_uah%₽"
+  - "%flag_by% Белорусский рубль: %currency_byn%₽"
+  - "%flag_md% Молдавский лей: %currency_mdl%₽"
+  - "%flag_pl% Польский злотый: %currency_pln%₽"
+  - "%flag_gb% Фунт стерлингов: %currency_gbp%₽"
+  - "%flag_tr% Турецкая лира: %currency_try%₽"
+  - "%flag_ch% Швейцарский франк: %currency_chf%₽"
+  - "%flag_ae% Дирхам ОАЭ: %currency_aed%₽"
 
 COMMAND_DECTOIP_DESCRIPTION: "Десятичный IP в IPv4"
+COMMAND_DECTOIP_MESSAGE: "[*] IPv4: %ipv4%"
 
 COMMAND_EXEC_DESCRIPTION: "Выполнить Linux-команду"
-COMMAND_EXEC_RESULT: "Команда выполнена! Ответ:"
 COMMAND_EXEC_CENSORED: "[скрыто]"
 COMMAND_EXEC_RESTARTING: "Перезагрузка бота..."
 
 COMMAND_GENSTR_DESCRIPTION: "Сгенерировать пароль"
-COMMAND_GENSTR_INVALID_LENGTH: "Укажите правильную длину: 1-100!"
-
-COMMAND_GRAPH_DESCRIPTION: "Кастомизировать свои графики"
-COMMAND_GRAPH_USAGE: "Использование:\n\n| /mcgraph background <clear> - Установить/удалить задний фон графика\n| /mcgraph color #<hex-код> - Установить цвет графика"
-COMMAND_GRAPH_BACKGROUND_NOT_STATED: "Вы не прикрепили картинку!\n\n| Требования:\n- не менее 256 пикселей по каждой стороне\n- не более 4096 пикселей по каждой стороне"
-COMMAND_GRAPH_BACKGROUND_INVALID: "Картинка не подходит по требованиям!\n\n| Требования:\n- не менее 256 пикселей по каждой стороне\n- не более 4096 пикселей по каждой стороне"
-COMMAND_GRAPH_BACKGROUND_SETTED: "Фон графика успешно установлен"
-COMMAND_GRAPH_BACKGROUND_DELETED: "Фон графика успешно удален"
-COMMAND_GRAPH_BACKGROUND_NOT_SETTED: "Фон графика не установлен!"
-COMMAND_GRAPH_COLOR_USAGE: "Использование: /mcgraph color #<hex-код>\nПример: #ffffff"
-COMMAND_GRAPH_COLOR_INVALID: "Неправильный HEX-код!\nПример: #ffffff"
-COMMAND_GRAPH_COLOR_SETTED: "Цвет графика успешно изменен"
+COMMAND_GENSTR_INVALID_LENGTH: "[!] Укажите правильную длину: 1-100!"
 
 COMMAND_HASH_DESCRIPTION: "Захешировать пароль/текст"
+COMMAND_HASH_MESSAGE:
+  - "[*] Захешированная строка:"
+  - ""
+  - "| SHA1: %sha1%"
+  - "| SHA256: %sha256%"
+  - "| SHA512: %sha512%"
+  - "| MD5: %md5"
 
 COMMAND_HELP_DESCRIPTION: "Список команд бота"
-COMMAND_HELP_PREFIXES: "Префиксы для команд"
-COMMAND_HELP_COMMANDS: "Команды бота"
+COMMAND_HELP_MESSAGE:
+  - "[*] Префиксы команд: %commandPrefixes%"
+  - "[*] Команды бота:"
+  - ""
+  - "%commandList%"
 COMMAND_HELP_ALIASES: "Алиасы"
 
 COMMAND_IPINFO_DESCRIPTION: "Информация об IP"
-COMMAND_IPINFO_LOCATION: "Локация"
-COMMAND_IPINFO_ORGANIZATION: "Организация"
-COMMAND_IPINFO_PROVIDER: "Провайдер"
-COMMAND_IPINFO_AS: "AS"
-COMMAND_IPINFO_ASNAME: "ASNAME"
-COMMAND_IPINFO_ZIP: "ZIP"
-COMMAND_IPINFO_IP: "IP"
-COMMAND_IPINFO_PTR: "PTR"
+COMMAND_IPINFO_MESSAGE:
+  - "[*] Результат проверки %ipOrig%:"
+  - ""
+  - "| IP: %ip%"
+  - "| PTR: %ptr%"
+  - "| Локация: %location%"
+  - "| Организация: %org%"
+  - "| ISP: %isp%"
+  - "| AS: %as%"
+  - "| ASNAME: %asname%"
+  - "| ZIP: %zip%"
 
 COMMAND_KICK_DESCRIPTION: "Исключение пользователя с беседы"
-COMMAND_KICK_ERROR: "Пользователь является администратором, его нет в беседе, либо у бота нет прав"
-COMMAND_KICK_KICKED: "Кикнут"
+COMMAND_KICK_ERROR: "[!] Пользователь является администратором, его нет в беседе, либо у бота нет прав"
+COMMAND_KICK_KICKED_MESSAGE:
+  - "[*] Пользователь %id%: кикнут ✅"
+  - "| Причина: %reason%"
 
 COMMAND_LOCALE_DESCRIPTION: "Сменить язык бота"
-COMMAND_LOCALE_SPECIFY_CODE: "Укажите код языка!"
-COMMAND_LOCALE_CODE_NOT_FOUND: "Код языка не найден!"
-COMMAND_LOCALE_CHANGED: "Язык успешно изменен!"
+COMMAND_LOCALE_SPECIFY_CODE: "[!] Укажите код языка!"
+COMMAND_LOCALE_CODE_NOT_FOUND: "[!] Код языка не найден!"
+COMMAND_LOCALE_CHANGED: "[*] Язык успешно изменен!"
 
 COMMAND_MCADD_DESCRIPTION: "Добавление сервера в базу бота"
-COMMAND_MCADD_SERVER_ADDED: "Сервер успешно добавлен в базу данных\n| Установить алиас: /mcalias"
+COMMAND_MCADD_SERVER_ADDED:
+  - "[*] Сервер успешно добавлен в базу данных"
+  - "| Установить алиас: /mcalias"
 
 COMMAND_MCALIAS_DESCRIPTION: "Установка алиаса добавленному серверу"
-COMMAND_MCALIAS_USAGE: "Использование команды: /mcalias [хост<:порт>] [алиас]"
-COMMAND_MCALIAS_SETTED: "Алиас серверу успешно установлен"
+COMMAND_MCALIAS_USAGE: "[*] Использование команды: /mcalias [хост<:порт>] [алиас]"
+COMMAND_MCALIAS_SETTED: "[*] Алиас серверу успешно установлен"
 
 COMMAND_MCDELETE_DESCRIPTION: "Удаление сервера из базы бота"
-COMMAND_MCDELETE_SERVER_DELETED: "Сервер успешно удален из базы!"
+COMMAND_MCDELETE_SERVER_DELETED: "[*] Сервер успешно удален из базы!"
+
+COMMAND_MCGRAPH_DESCRIPTION: "Кастомизировать свои графики"
+COMMAND_MCGRAPH_USAGE:
+  - "[*] Использование:"
+  - ""
+  - "| /mcgraph background <clear> - Установить/удалить задний фон графика"
+  - "| /mcgraph color #<hex-код> - Установить цвет графика"
+COMMAND_MCGRAPH_BACKGROUND_NOT_STATED: 
+  - "[!] Вы не прикрепили картинку!"
+  - ""
+  - "| Требования:"
+  - "- не менее 256 пикселей по каждой стороне"
+  - "- не более 4096 пикселей по каждой стороне"
+COMMAND_MCGRAPH_BACKGROUND_INVALID:
+  - "[!] Картинка не подходит по требованиям!"
+  - ""
+  - "| Требования:"
+  - "- не менее 256 пикселей по каждой стороне"
+  - "- не более 4096 пикселей по каждой стороне"
+COMMAND_MCGRAPH_BACKGROUND_SETTED: "[*] Фон графика успешно установлен"
+COMMAND_MCGRAPH_BACKGROUND_DELETED: "[*] Фон графика успешно удален"
+COMMAND_MCGRAPH_BACKGROUND_NOT_SETTED: "[!] Фон графика не установлен!"
+COMMAND_MCGRAPH_COLOR_USAGE:
+  - "[*] Использование: /mcgraph color #<hex-код>"
+  - "| Пример: /mcgraph color #ffffff"
+COMMAND_MCGRAPH_COLOR_INVALID:
+  - "[!] Неправильный HEX-код!"
+  - "| Пример: /mcgraph color #ffffff"
+COMMAND_MCGRAPH_COLOR_SETTED: "[*] Цвет графика успешно изменен"
 
 COMMAND_MCPING_DESCRIPTION: "Информация о сервере Minecraft"
-COMMAND_MCPING_MOJANG_BAN_UNKNOWN: "Неизвестно"
-COMMAND_MCPING_PING: "Пинг"
-COMMAND_MCPING_MS: "мс."
-COMMAND_MCPING_CORE: "Ядро"
-COMMAND_MCPING_PROTOCOL: "Протокол"
-COMMAND_MCPING_ONLINE: "Онлайн"
-COMMAND_MCPING_MOJANG_BAN: "Бан Mojang"
-COMMAND_MCPING_MOTD: "MOTD"
+COMMAND_MCPING_MOJANG_BAN_UNKNOWN: "Неизвестно ♨"
+COMMAND_MCPING_MESSAGE:
+  - "[*] Результат проверки %ip%:"
+  - ""
+  - "| Пинг: %ping% мс."
+  - "| Ядро: %core%"
+  - "| Протокол: %protocol%"
+  - "| Онлайн: %online%/%onlineMax%"
+  - "| Бан Mojang: %mojangBan%"
+  - "| MOTD:"
+  - ""
+  - "%motd%"
 COMMAND_MCPING_CLOSED: "Сервер предварительно закрыл соединение"
 COMMAND_MCPING_INVALID_PACKET: "Сервер вернул некорректный пакет"
 COMMAND_MCPING_INVALID_VALUE: "Сервер вернул некорректный (пустой) ответ"
 COMMAND_MCPING_INVALID_JSON: "Сервер вернул некорректный JSON"
 COMMAND_MCPING_OFFLINE: "Сервер оффлайн"
 COMMAND_MCPING_TIMEDOUT: "Время ожидания ответа вышло"
+COMMAND_MCPING_FAILED_PING:
+  - "[!] Не удалось получить информацию"
+  - "| Причина: %reason%"
 
 COMMAND_MCPLAYER_DESCRIPTION: "Информация об игроке Minecraft"
+COMMAND_MCPLAYER_INFO_MESSAGE:
+  - "[*] Информация об игроке %player%:"
+  - ""
+  - "| UUID: %uuid%"
+  - "| Регистрация: %dateReg%"
 COMMAND_MCPLAYER_DATEREG_UNKNOWN: "<неизвестно>"
 COMMAND_MCPLAYER_VIME_INFO: "Vime-информация"
 
-COMMAND_MCSA_USAGE: "Использование:\n\n| /mcsa info <ip-адрес> - информация о сервере\n| /mcsa alias <ip-адрес> <алиас> - установить алиас\n| /mcsa owner <ip-адрес> <упоминание/ответ> - установить нового владельца"
-COMMAND_MCSA_SERVER_INFO: "Информация о сервере (%s)\n\n| ID: %d\n| Добавлен: %s\n| Алиас: «%s»\n| Владелец: %s"
-COMMAND_MCSA_ALIAS_CHANGED: "Новый алиас успешно установлен!"
-COMMAND_MCSA_OWNER_CHANGED: "Владелец сервера изменен! Новый владелец: %s"
+COMMAND_MCSA_USAGE:
+  - "[*] Использование:"
+  - ""
+  - "| /mcsa info <ip-адрес> - информация о сервере"
+  - "| /mcsa alias <ip-адрес> <алиас> - установить алиас"
+  - "| /mcsa owner <ip-адрес> <упоминание/ответ> - установить нового владельца"
+COMMAND_MCSA_SERVER_INFO:
+  - "[*] Информация о сервере (%ip%)"
+  - ""
+  - "| ID: %id%"
+  - "| Добавлен: %timeAdded%"
+  - "| Алиас: «%alias%»"
+  - "| Владелец: %owner%"
+COMMAND_MCSA_ALIAS_CHANGED: "[*] Новый алиас успешно установлен!"
+COMMAND_MCSA_OWNER_CHANGED: "[*] Владелец сервера изменен! Новый владелец: %id%"
 
 COMMAND_MCSTATS_DESCRIPTION: "Статистика онлайна сервера Minecraft"
 COMMAND_MCSTATS_DATA_WILL_BE_SOON: "Этот сервер был добавлен недавно, статистика доступна через 10 минут после добавления"
 COMMAND_MCSTATS_DATA_OLD: "Нет данных для этого сервера за 24 часа, возможно, он недоступен, или произошла ошибка при получении данных"
+COMMAND_MCSTATS_MESSAGE:
+  - "[*] %ip%"
+  - ""
+  - "| Текущий онлайн: %currentOnline%"
+  - "| Онлайн сутки назад в это время: %online24HAgo%"
+  - "| Средний суточный онлайн: %avgOnline%"
+  - "| Рекорд онлайна за сутки: %max24HOnline%"
+  - "| Рекорд онлайна за все время: %maxOnline%"
 COMMAND_MCSTATS_CREATING: "Создание графика, ожидайте..."
-COMMAND_MCSTATS_ONLINE_CURRENT: "Текущий онлайн"
-COMMAND_MCSTATS_ONLINE_24H: "Онлайн сутки назад в это время"
-COMMAND_MCSTATS_ONLINE_AVERAGE_24: "Средний суточный онлайн"
-COMMAND_MCSTATS_ONLINE_MAX_24: "Рекорд онлайна за сутки"
-COMMAND_MCSTATS_ONLINE_MAX: "Рекорд онлайна за все время"
 
 COMMAND_PHONE_DESCRIPTION: "Информация о номере телефона"
-COMMAND_PHONE_UNAVAILABLE: "Данная функция недоступна, попробуйте через 1 час"
-COMMAND_PHONE_LOCATION: "Локация"
-COMMAND_PHONE_PROVIDER: "Оператор"
-COMMAND_PHONE_TYPE: "Тип"
+COMMAND_PHONE_UNAVAILABLE: "[!] Данная функция недоступна, попробуйте через 1 час"
+COMMAND_PHONE_MESSAGE:
+  - "[*] Информация об номере %phone%:"
+  - ""
+  - "| Локация: %location%"
+  - "| Оператор: %carrier%"
+  - "| Тип: %line_type%"
 
 COMMAND_PORT_DESCRIPTION: "Проверка порта по протоколу TCP"
+COMMAND_PORT_MESSAGE: "[*] Результат проверки %hostPort%: %status%"
 
 COMMAND_REVTEXT_DESCRIPTION: "Развернуть текст задом наперед"
 
 COMMAND_QR_DESCRIPTION: "Создать QR-код с любым текстом"
-COMMAND_QR_TEXT: "Текст в QR-коде"
-COMMAND_QR_TOO_BIG: "Максимальная длина текста: 1250 символов"
+COMMAND_QR_TEXT: "[*] Текст в QR-коде"
+COMMAND_QR_TOO_BIG: "[!] Максимальная длина текста: 1250 символов"
 
 COMMAND_SAY_DESCRIPTION: "Написать сообщение от имени бота"
 
 COMMAND_SHORT_DESCRIPTION: "Сократить ссылку разными сервисами"
-COMMAND_SHORT_SELECT_SERVICE: "Выберите сервис, через который сократить ссылку"
-COMMAND_SHORT_UNKNOWN_SERVICE: "Неизвестный сервис, доступные: clck/vkcc"
-COMMAND_SHORT_ERROR: "Не удалось сократить ссылку, попробуйте еще раз"
-COMMAND_SHORT_SHORTED_URL: "Сокращенная ссылка"
+COMMAND_SHORT_SELECT_SERVICE: "[!] Выберите сервис, через который сократить ссылку"
+COMMAND_SHORT_UNKNOWN_SERVICE: "[!] Неизвестный сервис, доступные: clck/vkcc"
+COMMAND_SHORT_ERROR: "[!] Не удалось сократить ссылку, попробуйте еще раз"
+COMMAND_SHORT_SHORTED_URL: "[*] Сокращенная ссылка: %link%"
 
 COMMAND_TL_DESCRIPTION: "Информация о рекламируемых серверах в TLauncher"
-COMMAND_TL_TEXT: "Рекламируемые сервера TLauncher"
+COMMAND_TL_MESSAGE:
+  - "[*] Рекламируемые сервера TLauncher:"
+  - ""
+  - "%servers%"
 
-COMMAND_USERINFO_INFO: "Информация о пользователе (%d):\n\n| Регистрация: %s\n| Заблокирован: %s\n| Цвет графика: %s\n| Фон графика: %s\n\n| Добавленные серверы: %s"
+COMMAND_USERINFO_MESSAGE:
+  - "[*] Информация о пользователе (%user%):"
+  - ""
+  - "| Регистрация: %registeredTime%"
+  - "| Заблокирован: %isBanned%"
+  - "| Цвет графика: %mcGraphColor%"
+  - "| Фон графика: %mcGraphBackground%"
+  - ""
+  - "| Добавленные серверы: %mcServers%"
 
 COMMAND_VIME_DESCRIPTION: "Информация об игроке VimeWorld"
-COMMAND_VIME_NOT_REGISTRED: "Не удалось получить информацию (игрок не зарегистрирован)"
-COMMAND_VIME_API_DOWN: "Не удалось получить информацию (API недоступно)"
-COMMAND_VIME_MCPLAYER_INFO: "Minecraft-информация"
-COMMAND_VIME_ID: "ID"
-COMMAND_VIME_RANK: "Ранг"
-COMMAND_VIME_LEVEL: "Уровень"
-COMMAND_VIME_LEVEL_MEASURE: "ур."
-COMMAND_VIME_PLAYED: "Наиграно"
-COMMAND_VIME_GUILD: "Гильдия"
+COMMAND_VIME_NOT_REGISTRED: "[!] Не удалось получить информацию (игрок не зарегистрирован)"
+COMMAND_VIME_API_DOWN: "[!] Не удалось получить информацию (API недоступно)"
+COMMAND_VIME_MESSAGE:
+  - "[*] Информация об игроке %player%:"
+  - ""
+  - "| ID: %id%"
+  - "| Ранг: %rank%"
+  - "| Уровень: %level%"
+  - "| Наиграно: %playedTime%"
+  - "| Гильдия: %guild%"
 COMMAND_VIME_RANK_PLAYER: "Игрок"
 COMMAND_VIME_RANK_VIP: "VIP"
 COMMAND_VIME_RANK_PREMIUM: "Premium"
@@ -245,6 +331,7 @@ COMMAND_VIME_RANK_MODER: "Модератор"
 COMMAND_VIME_RANK_WARDEN: "Проверенный модератор"
 COMMAND_VIME_RANK_CHIEF: "Главный модератор"
 COMMAND_VIME_RANK_ADMIN: "Главный админ"
+COMMAND_VIME_MCPLAYER_INFO: "Minecraft-информация"
 
 COMMAND_VKID_DESCRIPTION: "Получение ID страницы ВКонтакте"
-COMMAND_VKID_ID: "ID пользователя"
+COMMAND_VKID_ID: "[*] ID пользователя: %id%"
