--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -99,16 +99,16 @@ COMMAND_CURRENCY_DESCRIPTION: "Курс валют относительно ру
 COMMAND_CURRENCY_MESSAGE:
   - "[*] Курс валют:"
   - ""
-  - "%flag_us% Доллар США: %currency_usd%₽"
-  - "%flag_eu% Евро: %currency_eur%₽"
-  - "%flag_ua% Украинская гривна: %currency_uah%₽"
-  - "%flag_by% Белорусский рубль: %currency_byn%₽"
-  - "%flag_md% Молдавский лей: %currency_mdl%₽"
-  - "%flag_pl% Польский злотый: %currency_pln%₽"
-  - "%flag_gb% Фунт стерлингов: %currency_gbp%₽"
-  - "%flag_tr% Турецкая лира: %currency_try%₽"
-  - "%flag_ch% Швейцарский франк: %currency_chf%₽"
-  - "%flag_ae% Дирхам ОАЭ: %currency_aed%₽"
+  - "| %flag_us% Доллар США: %currency_usd%₽"
+  - "| %flag_eu% Евро: %currency_eur%₽"
+  - "| %flag_ua% Украинская гривна: %currency_uah%₽"
+  - "| %flag_by% Белорусский рубль: %currency_byn%₽"
+  - "| %flag_md% Молдавский лей: %currency_mdl%₽"
+  - "| %flag_pl% Польский злотый: %currency_pln%₽"
+  - "| %flag_gb% Фунт стерлингов: %currency_gbp%₽"
+  - "| %flag_tr% Турецкая лира: %currency_try%₽"
+  - "| %flag_ch% Швейцарский франк: %currency_chf%₽"
+  - "| %flag_ae% Дирхам ОАЭ: %currency_aed%₽"
 
 COMMAND_DECTOIP_DESCRIPTION: "Десятичный IP в IPv4"
 COMMAND_DECTOIP_MESSAGE: "[*] IPv4: %ipv4%"
