--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -89,6 +89,9 @@ COMMAND_BOT_MESSAGE:
   - "| Всего ОЗУ: %totalRam% мб."
   - "| Макс. ОЗУ: %maxRam% мб."
   - "| Используется ОЗУ: %usedRam% мб."
+  - ""
+  - "| Локалей: %localesAmount%"
+  - "| Загружено ключей: %loadedKeysAmount%"
 COMMAND_BOT_RESTART: "Перезагрузить"
 
 COMMAND_CONVIP_DESCRIPTION: "Конвертировать IPv4 в десятеричный"
