--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -92,6 +92,7 @@ COMMAND_BOT_MESSAGE:
   - ""
   - "| Локалей: %localesAmount%"
   - "| Загружено ключей: %loadedKeysAmount%"
+  - "| Загружено строк: %loadedStringsAmount%"
 COMMAND_BOT_RESTART: "Перезагрузить"
 
 COMMAND_CONVIP_DESCRIPTION: "Конвертировать IPv4 в десятеричный"
