--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -251,6 +251,15 @@ COMMAND_MCSA_USAGE:
   - "| /mcsa info <ip-адрес> - информация о сервере"
   - "| /mcsa alias <ip-адрес> <алиас> - установить алиас"
   - "| /mcsa owner <ip-адрес> <упоминание/ответ> - установить нового владельца"
+  - ""
+  - "| /mcsa blacklist - список серверов, находящихся в ЧС"
+  - "| /mcsa blacklist <ip-адрес> - добавить/удалить сервер из ЧС"
+  - ""
+  - "| /mcsa boosting - список серверов, имеющие статус накрутки"
+  - "| /mcsa boosting <ip-адрес> - установить/снять статус накрутки"
+  - ""
+  - "| /mcsa duplicate <ip-адрес> <ориг. сервер> - установить сервер дубликатом другого"
+  - "| /mcsa duplicate <ip-адрес> <remove> - исключить сервер из дубликатов"
 COMMAND_MCSA_SERVER_INFO:
   - "[*] Информация о сервере (%ip%)"
   - ""
