--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -292,6 +292,9 @@ COMMAND_MCSA_DUPLICATE_FOR_SERVER_DELETED:
 COMMAND_MCSA_DUPLICATE_SERVER_ALREADY_USED:
   - "[*] Сервер %fromIP% уже является дубликатом %toIP%"
   - "| Для начала удалите дубликат для %toIP%!"
+COMMAND_MCSA_DUPLICATE_SERVER_NOT_DUPLICATING:
+  - "[*] Сервер %fromIP% не является дубликатом какого-либо сервера!"
+  - "| Для начала установите сервер как дубликат!"
 
 COMMAND_MCSTATS_DESCRIPTION: "Статистика онлайна сервера Minecraft"
 COMMAND_MCSTATS_DATA_WILL_BE_SOON: "Этот сервер был добавлен недавно, статистика доступна через 10 минут после добавления"
