--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -7,6 +7,7 @@ CLOSED: "Закрыто"
 BLOCKED: "Заблокирован"
 UNBLOCKED: "Разблокирован"
 
+BOOSTING_SUSPICION: "Подозрение в накрутке онлайна"
 BOOSTING: "Накручивает"
 NOT_BOOSTING: "Не накручивает"
 
