--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -55,6 +55,8 @@ ERROR_NO_IP: "[!] В данном сообщении нет IP-адреса/до
 ERROR_GET_INFO: "[!] Не удалось получить информацию"
 ERROR_REPLY_USER_MESSAGE: "[!] Перешлите сообщение пользователя!"
 ERROR_SPECIFY_REASON: "[!] Укажите причину!"
+ERROR_MODULE_NOT_FOUND: "[!] Данный модуль не найден!"
+ERROR_MODULE_ERROR: "[!] Произошла ошибка при взаимодействии с данным модулем!"
 ERROR_MOJANG_UNAVAILABLE: "[!] Не удалось получить информацию (нет лицензии/сервера Mojang недоступны)"
 ERROR_SERVER_ALREADY_ADDED: "[!] Такой сервер уже добавлен!"
 ERROR_ALIAS_SMALL_OR_BIG: "[!] Алиас должен иметь длину 2-16 символов"
@@ -315,6 +317,34 @@ COMMAND_MCSTATS_MESSAGE:
   - "| Рекорд онлайна за сутки: %max24HOnline%"
   - "| Рекорд онлайна за все время: %maxOnline%"
 COMMAND_MCSTATS_CREATING: "Создание графика, ожидайте..."
+
+COMMAND_MODULEMANAGEMENT_DESCRIPTION: "Управление модулями бота"
+COMMAND_MODULEMANAGEMENT_HELP:
+  - "[*] Использование:"
+  - ""
+  - "| /module list - Список загруженных модулей"
+  - ""
+  - "| /module load <название> - Загрузить и активировать модуль"
+  - "| /module unload <название> - Отгрузить модуль"
+  - "| /module reload <название> - Перезагрузить модуль"
+  - ""
+  - "| /module enable <название> - Активировать модуль"
+  - "| /module disable <название> - Деактивировать модуль"
+COMMAND_MODULEMANAGEMENT_LIST:
+  - "[*] Список загруженных модулей:"
+  - ""
+  - "%modulesList%"
+COMMAND_MODULEMANAGEMENT_MODULES_LIST_FORMAT: "&#12288;— %moduleName% [v%moduleVersion]: %moduleStatus%"
+COMMAND_MODULEMANAGEMENT_MODULE_LOADED: "[*] Модуль %moduleName% [v%moduleVersion] загружен и активирован"
+COMMAND_MODULEMANAGEMENT_MODULE_UNLOADED: "[*] Модуль %moduleName% [v%moduleVersion] отгружен"
+COMMAND_MODULEMANAGEMENT_MODULE_RELOADED: "[*] Модуль %moduleName% [v%moduleVersion] перезагружен"
+COMMAND_MODULEMANAGEMENT_MODULE_ENABLED: "[*] Модуль %moduleName% [v%moduleVersion] активирован"
+COMMAND_MODULEMANAGEMENT_MODULE_DISABLED: "[*] Модуль %moduleName% [v%moduleVersion] деактивирован"
+COMMAND_MODULEMANAGEMENT_MODULE_LOADING: "[*] Загрузка..."
+COMMAND_MODULEMANAGEMENT_MODULE_UNLOADING: "[*] Отгрузка..."
+COMMAND_MODULEMANAGEMENT_MODULE_RELOADING: "[*] Перезагрузка..."
+COMMAND_MODULEMANAGEMENT_MODULE_ENABLING: "[*] Активация модуля..."
+COMMAND_MODULEMANAGEMENT_MODULE_DISABLING: "[*] Деактивация модуля..."
 
 COMMAND_PHONE_DESCRIPTION: "Информация о номере телефона"
 COMMAND_PHONE_UNAVAILABLE: "[!] Данная функция недоступна, попробуйте через 1 час"
