--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -337,12 +337,12 @@ COMMAND_MODULEMANAGEMENT_LIST:
   - "[*] Список загруженных модулей:"
   - ""
   - "%modulesList%"
-COMMAND_MODULEMANAGEMENT_MODULES_LIST_FORMAT: "&#12288;— %moduleName% [v%moduleVersion]: %moduleStatus%"
-COMMAND_MODULEMANAGEMENT_MODULE_LOADED: "[*] Модуль %moduleName% [v%moduleVersion] загружен и активирован"
-COMMAND_MODULEMANAGEMENT_MODULE_UNLOADED: "[*] Модуль %moduleName% [v%moduleVersion] отгружен"
-COMMAND_MODULEMANAGEMENT_MODULE_RELOADED: "[*] Модуль %moduleName% [v%moduleVersion] перезагружен"
-COMMAND_MODULEMANAGEMENT_MODULE_ENABLED: "[*] Модуль %moduleName% [v%moduleVersion] активирован"
-COMMAND_MODULEMANAGEMENT_MODULE_DISABLED: "[*] Модуль %moduleName% [v%moduleVersion] деактивирован"
+COMMAND_MODULEMANAGEMENT_MODULES_LIST_FORMAT: "&#12288;— %moduleName% [v%moduleVersion%]: %moduleStatus%"
+COMMAND_MODULEMANAGEMENT_MODULE_LOADED: "[*] Модуль %moduleName% [v%moduleVersion%] загружен и активирован"
+COMMAND_MODULEMANAGEMENT_MODULE_UNLOADED: "[*] Модуль %moduleName% [v%moduleVersion%] отгружен"
+COMMAND_MODULEMANAGEMENT_MODULE_RELOADED: "[*] Модуль %moduleName% [v%moduleVersion%] перезагружен"
+COMMAND_MODULEMANAGEMENT_MODULE_ENABLED: "[*] Модуль %moduleName% [v%moduleVersion%] активирован"
+COMMAND_MODULEMANAGEMENT_MODULE_DISABLED: "[*] Модуль %moduleName% [v%moduleVersion%] деактивирован"
 
 COMMAND_PHONE_DESCRIPTION: "Информация о номере телефона"
 COMMAND_PHONE_UNAVAILABLE: "[!] Данная функция недоступна, попробуйте через 1 час"
