--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -64,7 +64,7 @@ ERROR_MOJANG_UNAVAILABLE: "[!] Не удалось получить информ
 ERROR_SERVER_ALREADY_ADDED: "[!] Такой сервер уже добавлен!"
 ERROR_ALIAS_SMALL_OR_BIG: "[!] Алиас должен иметь длину 2-16 символов"
 ERROR_ALIAS_OCCUPIED: "[!] Такой алиас уже используется!"
-ERROR_SERVER_NOT_YOUR: "[!] Устанавливать алиас может только тот, кто добавил сервер!"
+ERROR_SERVER_NOT_YOUR: "[!] Выполнить данное действие может тот, кто добавил сервер"
 ERROR_SERVER_NOT_EXIST: "[!] Данный сервер не добавлен! Добавить: /mcadd [хост<:порт>]"
 ERROR_SERVER_IN_BLACKLIST: "[!] Данный сервер находится в ЧС, с ним нельзя взаимодействовать"
 ERROR_USER_NOT_EXIST: "[!] Данный пользователь не найден в базе данных!"
