--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -263,6 +263,7 @@ COMMAND_MCSA_USAGE:
   - "| /mcsa info <ip-адрес> - информация о сервере"
   - "| /mcsa alias <ip-адрес> <алиас> - установить алиас"
   - "| /mcsa owner <ip-адрес> <упоминание/ответ> - установить нового владельца"
+  - "| /mcsa delete <ip-адрес> - удалить сервер из БД"
   - ""
   - "| /mcsa blacklist - список серверов, находящихся в ЧС"
   - "| /mcsa blacklist <ip-адрес> - добавить/удалить сервер из ЧС"
