--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -101,18 +101,28 @@ COMMAND_BOT_MESSAGE:
   - "| Аптайм: %uptime%"
   - "| Версия: %version%"
   - ""
+  - "| Активные модули (%enabledModulesAmount%):"
+  - "%enabledModules%"
+COMMAND_BOT_ENABLED_MODULE_FORMAT: "%moduleName% (v%moduleVersion%)"
+COMMAND_BOT_RESTART: "Перезагрузить"
+COMMAND_BOT_SYSTEM_MESSAGE:
+  - "[*] Системная информация:"
+  - ""
+  - "| ОС: %osName%"
+  - "| Аптайм системы: %systemUptime%"
+  - "| Аптайм процесса: %uptime%"
+  - ""
+  - "| Процессор: %cpuName%"
+  - "| Ядер: %cpuCores%"
+  - "| Использование процессора: %cpuUsedPercentage"
+  - ""
   - "| Всего ОЗУ: %totalRam% мб."
   - "| Макс. ОЗУ: %maxRam% мб."
   - "| Используется ОЗУ: %usedRam% мб."
   - ""
-  - "| Активные модули (%enabledModulesAmount%):"
-  - "%enabledModules%"
-  - ""
   - "| Локалей: %localesAmount%"
   - "| Загружено ключей: %loadedKeysAmount%"
   - "| Загружено строк: %loadedStringsAmount%"
-COMMAND_BOT_ENABLED_MODULE_FORMAT: "%moduleName% (v%moduleVersion%)"
-COMMAND_BOT_RESTART: "Перезагрузить"
 
 COMMAND_CONVIP_DESCRIPTION: "Конвертировать IPv4 в десятеричный"
 COMMAND_CONVIP_DECIMAL_CONVERTED: "[*] Десятичный IP: %decimalIP%"
