--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -374,6 +374,7 @@ COMMAND_QR_TOO_BIG: "[!] Максимальная длина текста: 1250 
 
 COMMAND_QUOTE_DESCRIPTION: "Создать цитату из пересланного сообщения"
 COMMAND_QUOTE_ONLY_FOR_USERS: "[!] Создание цитаты доступно только из сообщения пользователя"
+COMMAND_QUOTE_ONLY_FOR_USERS: "[!] Сообщение должно содержать текст"
 
 COMMAND_REVTEXT_DESCRIPTION: "Развернуть текст задом наперед"
 
