--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -85,6 +85,7 @@ ERROR_INVALID_INT: "[!] Указано неверное число!"
 ERROR_INVALID_NUMBER: "[!] Указан неверный номер, перепроверьте его"
 ERROR_INVALID_PORT: "[!] Указан некорректный порт, перепроверьте его"
 ERROR_INVALID_PORT_LENGTH: "[!] Портов больше 65535 не существует!"
+ERROR_INVALID_PERIOD: "[!] Указан некорректный период, используйте формат: 1s/1m/1h/1d"
 ERROR_NO_IP: "[!] В данном сообщении нет IP-адреса/домена"
 ERROR_GET_INFO: "[!] Не удалось получить информацию"
 ERROR_REPLY_USER_MESSAGE: "[!] Перешлите сообщение пользователя!"
