new ranks on vimeworld

--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -458,6 +458,10 @@ COMMAND_VIME_RANK_VIP: "VIP"
 COMMAND_VIME_RANK_PREMIUM: "Premium"
 COMMAND_VIME_RANK_HOLY: "Holy"
 COMMAND_VIME_RANK_IMMORTAL: "Immortal"
+COMMAND_VIME_RANK_DIVINE: "Divine"
+COMMAND_VIME_RANK_THANE: "Thane"
+COMMAND_VIME_RANK_ELITE: "Elite"
+COMMAND_VIME_RANK_ETERNAL: "Eternal"
 COMMAND_VIME_RANK_BUILDER: "Билдер"
 COMMAND_VIME_RANK_SRBUILDER: "Проверенный билдер"
 COMMAND_VIME_RANK_MAPLEAD: "Главный билдер"
